# pickpocket

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/: main.workflow
scripts/: before_deploy.sh  id_rsa.enc  install.sh  script.sh  travis-doc-upload.cfg  utils.sh
src/: batch.rs  cli.rs  lib.rs
src/auth/: mod.rs
