[package]
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
name = "pickpocket"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "0.8.0"
chrono = "0.3.0"
flate2 = "0.2.19"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.22"
serde = "1.0.7"
serde_json = "1.0.2"
serde_derive = "1.0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
csv = "1.1"
