[package]
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
name = "pickpocket"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.1"
chrono = "0.4.19"
flate2 = "1.0.19"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.22"
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
csv = "1.1"
